Redesign workflow engine and provisioner API
This replaces the call-back based `WorkMonitor` with the fluent monad
`OperationAction` API. This change will prevent recovery of any inflight
operations.