@@ -29,6 +29,7 @@ import ca.on.oicr.gsi.vidarr.InputProvisioner;
 import ca.on.oicr.gsi.vidarr.InputType;
 import ca.on.oicr.gsi.vidarr.JsonBodyHandler;
 import ca.on.oicr.gsi.vidarr.JsonPost;
+import ca.on.oicr.gsi.vidarr.OperationStatus;
 import ca.on.oicr.gsi.vidarr.OutputProvisionFormat;
 import ca.on.oicr.gsi.vidarr.OutputProvisioner;
 import ca.on.oicr.gsi.vidarr.OutputType;
@@ -40,7 +41,6 @@ import ca.on.oicr.gsi.vidarr.api.*;
 import ca.on.oicr.gsi.vidarr.core.BaseProcessor;
 import ca.on.oicr.gsi.vidarr.core.ExtractInputVidarrIds;
 import ca.on.oicr.gsi.vidarr.core.FileMetadata;
-import ca.on.oicr.gsi.vidarr.core.OperationStatus;
 import ca.on.oicr.gsi.vidarr.core.Phase;
 import ca.on.oicr.gsi.vidarr.core.Target;
 import ca.on.oicr.gsi.vidarr.server.DatabaseBackedProcessor.DeleteResultHandler;
@@ -443,19 +443,19 @@ public final class Main implements ServerConfig {
   private final ReentrantReadWriteLock epochLock = new ReentrantReadWriteLock();
   private final ScheduledExecutorService executor =
       Executors.newScheduledThreadPool(Runtime.getRuntime().availableProcessors());
-  private final Map<String, InputProvisioner> inputProvisioners;
+  private final Map<String, InputProvisioner<?>> inputProvisioners;
   private final Semaphore loadCounter = new Semaphore(3);
   private final MaxInFlightByWorkflow maxInFlightPerWorkflow = new MaxInFlightByWorkflow();
   private final Map<String, String> otherServers;
-  private final Map<String, OutputProvisioner> outputProvisioners;
+  private final Map<String, OutputProvisioner<?, ?>> outputProvisioners;
   private final int port;
   private final DatabaseBackedProcessor processor;
-  private final Map<String, RuntimeProvisioner> runtimeProvisioners;
+  private final Map<String, RuntimeProvisioner<?>> runtimeProvisioners;
   private final String selfName;
   private final String selfUrl;
   private final Map<String, Target> targets;
   private final Path unloadDirectory;
-  private final Map<String, WorkflowEngine> workflowEngines;
+  private final Map<String, WorkflowEngine<?, ?>> workflowEngines;
   private final StatusPage status =
       new StatusPage(this) {
         @Override
@@ -559,10 +559,10 @@ public final class Main implements ServerConfig {
                                       Stream.of(
                                           new Pair<String, ConsumableResource>(
                                               "", maxInFlightPerWorkflow)))
-                                  .collect(Collectors.toList());
-                          private final WorkflowEngine engine =
+                                  .toList();
+                          private final WorkflowEngine<?, ?> engine =
                               workflowEngines.get(e.getValue().getWorkflowEngine());
-                          private final Map<InputProvisionFormat, InputProvisioner>
+                          private final Map<InputProvisionFormat, InputProvisioner<?>>
                               inputProvisioners =
                                   e.getValue().getInputProvisioners().stream()
                                       .map(Main.this.inputProvisioners::get)
@@ -570,13 +570,17 @@ public final class Main implements ServerConfig {
                                           p ->
                                               Stream.of(InputProvisionFormat.values())
                                                   .filter(p::canProvision)
-                                                  .map(f -> new Pair<>(f, p)))
+                                                  .map(
+                                                      f ->
+                                                          new Pair<
+                                                              InputProvisionFormat,
+                                                              InputProvisioner<?>>(f, p)))
                                       .collect(
                                           Collectors
-                                              .<Pair<InputProvisionFormat, InputProvisioner>,
-                                                  InputProvisionFormat, InputProvisioner>
+                                              .<Pair<InputProvisionFormat, InputProvisioner<?>>,
+                                                  InputProvisionFormat, InputProvisioner<?>>
                                                   toMap(Pair::first, Pair::second));
-                          private final Map<OutputProvisionFormat, OutputProvisioner>
+                          private final Map<OutputProvisionFormat, OutputProvisioner<?, ?>>
                               outputProvisioners =
                                   e.getValue().getOutputProvisioners().stream()
                                       .map(Main.this.outputProvisioners::get)
@@ -584,16 +588,22 @@ public final class Main implements ServerConfig {
                                           p ->
                                               Stream.of(OutputProvisionFormat.values())
                                                   .filter(p::canProvision)
-                                                  .map(f -> new Pair<>(f, p)))
+                                                  .map(
+                                                      f ->
+                                                          new Pair<
+                                                              OutputProvisionFormat,
+                                                              OutputProvisioner<?, ?>>(f, p)))
                                       .collect(
                                           Collectors
-                                              .<Pair<OutputProvisionFormat, OutputProvisioner>,
-                                                  OutputProvisionFormat, OutputProvisioner>
+                                              .<Pair<
+                                                      OutputProvisionFormat,
+                                                      OutputProvisioner<?, ?>>,
+                                                  OutputProvisionFormat, OutputProvisioner<?, ?>>
                                                   toMap(Pair::first, Pair::second));
-                          private final List<RuntimeProvisioner> runtimeProvisioners =
+                          private final List<RuntimeProvisioner<?>> runtimeProvisioners =
                               e.getValue().getRuntimeProvisioners().stream()
-                                  .map(Main.this.runtimeProvisioners::get)
-                                  .collect(Collectors.toList());
+                                  .<RuntimeProvisioner<?>>map(Main.this.runtimeProvisioners::get)
+                                  .toList();
 
                           @Override
                           public Stream<Pair<String, ConsumableResource>> consumableResources() {
@@ -601,22 +611,23 @@ public final class Main implements ServerConfig {
                           }
 
                           @Override
-                          public WorkflowEngine engine() {
+                          public WorkflowEngine<?, ?> engine() {
                             return engine;
                           }
 
                           @Override
-                          public InputProvisioner provisionerFor(InputProvisionFormat type) {
+                          public InputProvisioner<?> provisionerFor(InputProvisionFormat type) {
                             return inputProvisioners.get(type);
                           }
 
                           @Override
-                          public OutputProvisioner provisionerFor(OutputProvisionFormat type) {
+                          public OutputProvisioner<?, ?> provisionerFor(
+                              OutputProvisionFormat type) {
                             return outputProvisioners.get(type);
                           }
 
                           @Override
-                          public Stream<RuntimeProvisioner> runtimeProvisioners() {
+                          public Stream<RuntimeProvisioner<?>> runtimeProvisioners() {
                             return runtimeProvisioners.stream();
                           }
                         }));
